--- a/10xCards/_Imports.razor
+++ b/10xCards/_Imports.razor
@@ -8,4 +8,8 @@
 @using Microsoft.JSInterop
 @using Supabase
 @using _10xCards
+@using _10xCards.Components.Auth
+@using _10xCards.Components.Nav
 @using _10xCards.Layout
+@using _10xCards.Models.Auth
+@using _10xCards.Models.Auth
