Update Register file

--- a/10xCards/Components/Auth/AuthInput.razor
+++ b/10xCards/Components/Auth/AuthInput.razor
@@ -7,10 +7,10 @@
                class="form-control"
                type="@Type"
                placeholder="@Placeholder"
-               Value="Value"
-               ValueChanged="ValueChanged"
-               ValueExpression="ValueExpression" />
-    <ValidationMessage For="ValueExpression" />
+               Value="@Value"
+               ValueChanged="@ValueChanged"
+               ValueExpression="@ValueExpression" />
+    <ValidationMessage For="@ValueExpression" />
 </div>
 
 @code {
