--- a/10xCards/_Imports.razor
+++ b/10xCards/_Imports.razor
@@ -12,4 +12,4 @@
 @using _10xCards.Components.Nav
 @using _10xCards.Layout
 @using _10xCards.Models.Auth
-@using _10xCards.Models.Auth
+@using _10xCards.Services
