--- a/10xCards/Pages/DashboardPage.razor
+++ b/10xCards/Pages/DashboardPage.razor
@@ -56,6 +56,7 @@ else
 @code {
     private readonly List<DeckViewModel> decks = new();
     private bool isLoading;
+    private bool isCheckingAuth = true;
     private string? errorMessage;
     private bool showCreateModal;
     private bool showDeleteModal;
@@ -64,6 +65,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
+        isCheckingAuth = true;
         await SupabaseAuthService.EnsureInitializedAsync();
 
         if (!UserSessionState.IsAuthenticated)
@@ -72,6 +74,7 @@ else
             return;
         }
 
+        isCheckingAuth = false;
         await LoadDecksAsync();
     }
 
