Update DeckDetailsPage file

--- a/10xCards/Pages/DeckDetailsPage.razor
+++ b/10xCards/Pages/DeckDetailsPage.razor
@@ -64,7 +64,7 @@ else
                       OnCancel="CloseEditModal"
                       IsBusy="isSaving" />
 
-<DeleteConfirmationModal IsOpen="isDeleteModalOpen"
+<DeleteConfirmationModal IsVisible="isDeleteModalOpen"
                          Title="Usuñ fiszkê"
                          Message="Czy na pewno chcesz usun¹æ tê fiszkê?"
                          OnConfirm="HandleDeleteConfirmed"
